@@ -6,20 +6,22 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.justice.laa.maat.scheduled.tasks.dto.XhibitRecordSheetDTO;
+import uk.gov.justice.laa.maat.scheduled.tasks.entity.XhibitTrialDataEntity;
 import uk.gov.justice.laa.maat.scheduled.tasks.enums.RecordSheetType;
 import uk.gov.justice.laa.maat.scheduled.tasks.repository.XhibitTrialDataRepository;
 import uk.gov.justice.laa.maat.scheduled.tasks.responses.GetRecordSheetsResponse;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static uk.gov.justice.laa.maat.scheduled.tasks.service.TrialDataService.OUTPUT_PARAMS;
 import static uk.gov.justice.laa.maat.scheduled.tasks.service.TrialDataService.TRIAL_DATA_TO_MAAT_PROCEDURE;
 
 @ExtendWith(MockitoExtension.class)
@@ -51,85 +53,77 @@ class TrialDataServiceTest {
         .build();
 
     @Test
-    void givenNoUnprocessedRecordSheets_whenPopulateTrialDataIsInvoked_thenNoDataIsPopulated() {
-        when(getRecordSheetsResponse.allRecordSheetsRetrieved()).thenReturn(true);
-        when(xhibitDataService.getRecordSheets(RecordSheetType.TRIAL, null)).thenReturn(getRecordSheetsResponse);
+    void givenNoUnprocessedRecordSheets_whenPopulateAndProcessTrialDataIsInvoked_thenNoDataInToMaatIsPopulated() {
+        when(xhibitDataService.getAllRecordSheets(RecordSheetType.TRIAL)).thenReturn(getRecordSheetsResponse);
 
-        trialDataService.populateTrialData();
+        trialDataService.populateAndProcessTrialDataInToMaat();
 
         verify(trialDataRepository, never()).saveAll(any());
-        verify(xhibitDataService, times(1)).getRecordSheets(RecordSheetType.TRIAL, null);
-        verify(xhibitDataService, never()).markRecordsSheetsAsProcessed(any(), any());
+        verify(xhibitDataService, times(1)).getAllRecordSheets(RecordSheetType.TRIAL);
+        verify(xhibitDataService, never()).markRecordSheetsAsProcessed(any(), any());
         verify(xhibitDataService, never()).markRecordSheetsAsErrored(any(), any());
+        verify(storedProcedureService, never()).callStoredProcedure(any(), any(), anyMap());
     }
 
     @Test
-    void givenUnprocessRecordSheetsThatAreSuccessfullyRetrieved_whenPopulateTrialDataIsInvoked_thenDataIsPopulated() {
+    void givenUnprocessRecordSheetsThatAreSuccessfullyRetrieved_whenPopulateAndProcessTrialDataIsInvoked_thenDataInToMaatIsPopulated() {
         when(getRecordSheetsResponse.getRetrievedRecordSheets()).thenReturn(List.of(xhibitRecordSheet1, xhibitRecordSheet2));
         when(getRecordSheetsResponse.getErroredRecordSheets()).thenReturn(Collections.emptyList());
-        when(getRecordSheetsResponse.allRecordSheetsRetrieved()).thenReturn(true);
 
-        when(xhibitDataService.getRecordSheets(RecordSheetType.TRIAL, null)).thenReturn(getRecordSheetsResponse);
+        when(xhibitDataService.getAllRecordSheets(RecordSheetType.TRIAL)).thenReturn(getRecordSheetsResponse);
+        when(trialDataRepository.findAll()).thenReturn(List.of(
+            XhibitTrialDataEntity.builder().id(1).filename(xhibitRecordSheet1.getFilename()).data(xhibitRecordSheet1.getData()).build(),
+            XhibitTrialDataEntity.builder().id(2).filename(xhibitRecordSheet2.getFilename()).data(xhibitRecordSheet2.getData()).build()
+        ));
 
-        trialDataService.populateTrialData();
+        trialDataService.populateAndProcessTrialDataInToMaat();
 
         verify(trialDataRepository, times(1)).saveAll(any());
-        verify(xhibitDataService, times(1)).getRecordSheets(RecordSheetType.TRIAL, null);
-        verify(xhibitDataService, times(1)).markRecordsSheetsAsProcessed(any(), any());
+        verify(xhibitDataService, times(1)).getAllRecordSheets(RecordSheetType.TRIAL);
+        verify(storedProcedureService, times(1)).callStoredProcedure(TRIAL_DATA_TO_MAAT_PROCEDURE, Map.of("id", 1), OUTPUT_PARAMS);
+        verify(storedProcedureService, times(1)).callStoredProcedure(TRIAL_DATA_TO_MAAT_PROCEDURE, Map.of("id", 2), OUTPUT_PARAMS);
+        verify(xhibitDataService, times(1)).markRecordSheetsAsProcessed(List.of(xhibitRecordSheet1, xhibitRecordSheet2), RecordSheetType.TRIAL);
         verify(xhibitDataService, never()).markRecordSheetsAsErrored(any(), any());
     }
 
     @Test
-    void givenUnprocessedRecordSheetsThatCannotBeRetrieved_whenPopulateTrialDataIsInvoked_thenNoDataIsPopulated() {
+    void givenUnprocessedRecordSheetsThatCannotBeRetrieved_whenPopulateAndProcessTrialDataIsInvoked_thenNoDataInToMaatIsPopulated() {
         when(getRecordSheetsResponse.getRetrievedRecordSheets()).thenReturn(Collections.emptyList());
         when(getRecordSheetsResponse.getErroredRecordSheets()).thenReturn(List.of(xhibitRecordSheet1, xhibitRecordSheet2));
-        when(getRecordSheetsResponse.allRecordSheetsRetrieved()).thenReturn(true);
 
-        when(xhibitDataService.getRecordSheets(RecordSheetType.TRIAL, null)).thenReturn(getRecordSheetsResponse);
+        when(xhibitDataService.getAllRecordSheets(RecordSheetType.TRIAL)).thenReturn(getRecordSheetsResponse);
 
-        trialDataService.populateTrialData();
+        trialDataService.populateAndProcessTrialDataInToMaat();
 
         verify(trialDataRepository, never()).saveAll(any());
-        verify(xhibitDataService, times(1)).getRecordSheets(RecordSheetType.TRIAL, null);
-        verify(xhibitDataService, never()).markRecordsSheetsAsProcessed(any(), any());
+        verify(xhibitDataService, times(1)).getAllRecordSheets(RecordSheetType.TRIAL);
+        verify(xhibitDataService, never()).markRecordSheetsAsProcessed(any(), any());
         verify(xhibitDataService, times(1)).markRecordSheetsAsErrored(any(), any());
     }
 
     @Test
-    void givenMultiplePagesOfUnprocessedRecordSheets_whenPopulateTrialDataIsInvoked_thenDataIsPopulated() {
-        GetRecordSheetsResponse firstResponse = GetRecordSheetsResponse.builder()
-            .retrievedRecordSheets(List.of(xhibitRecordSheet1))
-            .erroredRecordSheets(Collections.emptyList())
-            .continuationToken("test-continuation-token")
-            .allRecordSheetsRetrieved(false)
-            .build();
-
-        GetRecordSheetsResponse secondResponse = GetRecordSheetsResponse.builder()
-            .retrievedRecordSheets(List.of(xhibitRecordSheet2))
+    void givenMultiplePagesOfUnprocessedRecordSheets_whenPopulateAndProcessTrialDataIsInvoked_thenDataInToMaatIsPopulated() {
+        GetRecordSheetsResponse response = GetRecordSheetsResponse.builder()
+            .retrievedRecordSheets(List.of(xhibitRecordSheet1, xhibitRecordSheet2))
             .erroredRecordSheets(Collections.emptyList())
             .continuationToken(null)
             .allRecordSheetsRetrieved(true)
             .build();
 
-        when(xhibitDataService.getRecordSheets(RecordSheetType.TRIAL, null)).thenReturn(firstResponse);
-        when(xhibitDataService.getRecordSheets(RecordSheetType.TRIAL, "test-continuation-token")).thenReturn(secondResponse);
+        when(xhibitDataService.getAllRecordSheets(RecordSheetType.TRIAL)).thenReturn(response);
+        when(xhibitDataService.getAllRecordSheets(RecordSheetType.TRIAL)).thenReturn(response);
+        when(trialDataRepository.findAll()).thenReturn(List.of(
+            XhibitTrialDataEntity.builder().id(1).filename(xhibitRecordSheet1.getFilename()).data(xhibitRecordSheet1.getData()).build(),
+            XhibitTrialDataEntity.builder().id(2).filename(xhibitRecordSheet2.getFilename()).data(xhibitRecordSheet2.getData()).build()
+        ));
 
-        trialDataService.populateTrialData();
+        trialDataService.populateAndProcessTrialDataInToMaat();
 
-        verify(trialDataRepository, times(2)).saveAll(any());
-        verify(xhibitDataService, times(1)).getRecordSheets(RecordSheetType.TRIAL, null);
-        verify(xhibitDataService, times(1)).getRecordSheets(RecordSheetType.TRIAL, "test-continuation-token");
-        verify(xhibitDataService, times(2)).markRecordsSheetsAsProcessed(any(), any());
+        verify(trialDataRepository, times(1)).saveAll(any());
+        verify(xhibitDataService, times(1)).getAllRecordSheets(RecordSheetType.TRIAL);
+        verify(storedProcedureService, times(1)).callStoredProcedure(TRIAL_DATA_TO_MAAT_PROCEDURE, Map.of("id", 1), OUTPUT_PARAMS);
+        verify(storedProcedureService, times(1)).callStoredProcedure(TRIAL_DATA_TO_MAAT_PROCEDURE, Map.of("id", 2), OUTPUT_PARAMS);
+        verify(xhibitDataService, times(1)).markRecordSheetsAsProcessed(List.of(xhibitRecordSheet1, xhibitRecordSheet2), RecordSheetType.TRIAL);
         verify(xhibitDataService, never()).markRecordSheetsAsErrored(any(), any());
-    }
-
-    @Test
-    void processTrialDataInToMaat() {
-        when(trialDataRepository.findAllUnprocessedIds()).thenReturn(List.of(1, 2, 3));
-
-        trialDataService.processTrialDataInToMaat();
-
-        verify(trialDataRepository, times(1)).findAllUnprocessedIds();
-        verify(storedProcedureService, times(3)).callStoredProcedure(eq(TRIAL_DATA_TO_MAAT_PROCEDURE), anyMap());
     }
 }
